# mrf

./: CMakeLists.txt  LICENSE  README.md  package.xml
apps/: CMakeLists.txt
apps/eval_planes/: eval_planes.cpp
apps/eval_scenenet/: eval_scenenet.cpp
cmake_modules/: FindGlog.cmake
include/mrf/: batch_processor.hpp  camera.h  camera_model.h  camera_model_ortho.h  camera_model_pinhole.h  camera_model_pinhole_functions.h  cloud.hpp  cloud_preprocessing.hpp  cv_helper.hpp  data.hpp  depth_prior.hpp  downsample.hpp  eigen.hpp  eigen_quaternion_parameterization.hpp  evaluate.hpp  evaluation.hpp  export.hpp  functor_collinearity.hpp  functor_distance.hpp  functor_normal.hpp  functor_normal_distance.hpp  functor_normal_smoothness.hpp  functor_smoothness.hpp  functor_smoothness_distance.hpp  functor_smoothness_normal.hpp  functors.hpp  image_preprocessing.hpp  io.hpp  math.hpp  mrf.h  mrf_data.hpp  mrf_data_eigen_cg.hpp  mrf_eigen_cg.hpp  mrf_solver.hpp  mrf_solver_eigen_cg.hpp  neighbor_relation.hpp  neighbors.hpp  neighbours.hpp  noise.hpp  normal_prior.hpp  (+13 more)
include/mrf/internal/: solver_impl.hpp
matlab/: evaluation.m
res/: parameters.yaml  parameters_planes.yaml  parameters_scenenet.yaml
src/: camera.cpp  camera_model.cpp  camera_model_pinhole.cpp  data.cpp  depth_prior.cpp  image_preprocessing.cpp  mrf.cpp  mrf_data_eigen_cg.cpp  mrf_eigen_cg.cpp  mrf_solver_eigen_cg.cpp  neighbors.cpp  normal_prior.cpp  optimization_data.cpp  parameters.cpp  params.cpp  prior.cpp  smoothness_weight.cpp  solver.cpp
test/: CMakeLists.txt  groundtruth_data.hpp  test_data.cpp  test_data.hpp  test_depth_prior.cpp  test_evaluate.cpp  test_functor_distance.cpp  test_functor_distance.hpp  test_functor_smoothness.cpp  test_functor_smoothness.hpp  test_functor_smoothness_distance.cpp  test_functors.cpp  test_groundtruth.cpp  test_groundtruth.hpp  test_image_preprocessing.cpp  test_image_preprocessing.cpp.orig  test_image_preprocessing.hpp  test_mrf.cpp  test_parameters.cpp  test_parameters.hpp  test_prior.cpp  test_solver.cpp  test_solver.hpp
