<?xml version="1.0"?>
<package format="2">
  <name>mrf</name>
  <version>1.0.0</version>
  <description>Library for interpolating images using Markov Random Fields.</description>

  <license>MRT/FZI</license>
  <maintainer email="sascha.wirges@kit.edu">Sascha Wirges</maintainer>
  <author email="sascha.wirges@kit.edu">Sascha Wirges</author>
  <url type="repository">git@gitlab.mrt.uni-karlsruhe.de:MRT/mrf.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>

  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>mrt_ceres</depend>
  <depend>mrt_opencv</depend>
  <depend>mrt_pcl</depend>
  <depend>pcl_ceres</depend>
  <depend>util_ceres</depend>
  <depend>yaml-cpp</depend>

  <export>
  </export>
</package>
