<?xml version="1.0"?>
<package format="2">
  <name>mrf</name>
  <version>1.0.0</version>
  <description>Library for interpolating images using Markov Random Fields.</description>

  <license>GPLv3</license>
  <maintainer email="sascha.wirges@kit.edu">Sascha Wirges</maintainer>
  <author email="sascha.wirges@kit.edu">Sascha Wirges</author>
  <url type="repository">git@gitlab.mrt.uni-karlsruhe.de:MRT/mrf.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>gtest</test_depend>

  <depend>Boost</depend>
  <depend>Eigen3</depend>
  <depend>OpenCV</depend>
  <depend>Glog</depend>
  <depend>ceres-solver</depend>
  <depend>PCL</depend>
  <depend>yaml-cpp</depend>

</package>
